--- a/src/components/styles/BirthdateInput.css
+++ b/src/components/styles/BirthdateInput.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: var(--color-blue);
+  text-align: center;
 
   @media (min-width: 599px) {
     box-shadow: 0 1px 12px rgba(0, 0, 0, 0.2);
@@ -15,6 +16,7 @@
   }
 
   > span {
+    font-size: 15px;
     @media (min-width: 599px) {
       font-size: 24px;
     }
@@ -44,6 +46,8 @@
     border-radius: 5px;
     text-indent: 10px;
     transition: all 0.2s ease;
+    text-align: center;
+    text-transform: uppercase;
 
     &::placeholder {
       color: var(--color-black);
